-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.4.1
-
None
-
3
-
11751
Hi,
We found a regression in the access by FID feature in Lustre 2.4. Indeed, stat by fid of .lustre/fid directory gets EINVAL.
This can be easily reproduced like this:
# lfs path2fid .lustre [0x200000002:0x1:0x0] # lfs path2fid .lustre/fid [0x200000002:0x2:0x0] # stat .lustre/fid/[0x200000002:0x2:0x0] stat: cannot stat `<lustre mount point>/.lustre/fid/[0x200000002:0x2:0x0]': Invalid argument # stat .lustre/fid/[0x200000002:0x1:0x0] stat: cannot stat `<lustre mount point>/.lustre/fid/[0x200000002:0x1:0x0]': Invalid argument
The same commands just work fine on Lustre 2.1.6.
This is a big issue as Ganesha relies on this to work.
Thanks,
Sebastien.