LU-4279 mdd: Fixed OBF of the FS .lustre

Added a check to prevent fid access to the filesystem .lustre
directory from returning EINVAL.
Added a sanity check accordingly.

Signed-off-by: Bruno Faccini <bruno.faccini@intel.com>
Change-Id: I3002e8dd1b834a0b6b87fe707e12573c2accb58c
Reviewed-on: http://review.whamcloud.com/8360
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: Sebastien Buisson <sebastien.buisson@bull.net>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>